--- a/frontend/ecommerce-frontend/index.html
+++ b/frontend/ecommerce-frontend/index.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sheepo | Online Shop with Huge Discounts!</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://www.paypal.com/sdk/js?client-id=AQvyqBwM3U7jRILb7xxUnDYTdou3kFj8z-KvEWey2bJTV10AfZdi_VdR3YlEMbiG0Y4PZR-dxrAH1utn"></script>
   </body>
 </html>
