--- a/frontend/ecommerce-frontend/index.html
+++ b/frontend/ecommerce-frontend/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  
-    <meta name="viewport" content="width=device-width, initial-scale=0.8" />
-    <title>Sheepo | Online Shop with Huge Discounts!</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@500&display=swap" rel="stylesheet">
+    <title>DealDash! | Online Shop with Huge Discounts!</title>
   </head>
   <body>
     <div id="root"></div>
