--- a/frontend/ecommerce-frontend/index.html
+++ b/frontend/ecommerce-frontend/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8" content='initial-scale=1.0, width=device-width' name='viewport' />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
